[package]
name = "fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
fuse3 = { version = "0.9.0", features = ["tokio-runtime", "unprivileged"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
dashmap = "5"
futures-util = "0.3"
libc = "0.2"

# Project dependencies
common = { path = "../common" }
consensus = { path = "../consensus" }
meta = { path = "../meta" }
network = { path = "../network" }
storage = { path = "../storage" }
vfs = { path = "../vfs" }