[package]
name    = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
common    = { path = "../common" }
consensus = { path = "../consensus" }
tokio     = { workspace = true }
serde     = { workspace = true }
tracing   = { workspace = true }
tonic     = "0.11"
prost     = "0.12"

[build-dependencies]
tonic-build = "0.11"